--- a/store/templates/selected_item.html
+++ b/store/templates/selected_item.html
@@ -12,7 +12,7 @@
                             Cart
                         </span>
                         <div class="cart-update">
-                            <span class=cart-updates>4</span>
+                            <span class=cart-updates>{{ total }}</span>
                         </div>
                     </div>
                     <div class="favorites">
