--- a/store/static/styles/selected.css
+++ b/store/static/styles/selected.css
@@ -461,7 +461,7 @@ h6 {
 }
 .main-cart-item .items-total .it-tot h6 {
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 700;
 }
 .main-cart-item .items-total span {
     display: flex;
@@ -471,7 +471,10 @@ h6 {
     justify-content: center;
     align-items: center;
     padding: 10px 60px;
-
+}
+.main-cart-item .items-total span a {
+    text-decoration: none;
+    color: rebeccapurple;
 }
 .table {
     width: 100%;
