--- a/store/templates/selected_item.html
+++ b/store/templates/selected_item.html
@@ -6,13 +6,13 @@
                 <div class="details">
                     <div class="cart">
                         <span class="envelope">
-                            <i class='bx bx-envelope'></i>
+                            <a href="/cart"><i class='bx bx-envelope'></i></a>
                         </span>
                         <span class="cart-text">
                             Cart
                         </span>
                         <div class="cart-update">
-                            <span class=cart-updates>{{ total }}</span>
+                            <span class="cart-updates">{{ total }}</span>
                         </div>
                     </div>
                     <div class="favorites">
