--- a/store/templates/selected_item.html
+++ b/store/templates/selected_item.html
@@ -91,6 +91,7 @@
                 <div class="add-cart">
                     <div class="add-btn">
                         <div class="add-cart-btn update-cart" data-action="add" data-product="{{ productId }}"><i class='bx bx-shopping-bag'></i> Add to cart</div>
+                        <div class="pop-up hide">Item Add &#10003;</div>
                         <div class="favit"><i class='bx bx-heart'></i></div>
                     </div>
                     <div class="delivery-info">
